--- a/Practica4.ipynb
+++ b/Practica4.ipynb
@@ -25,6 +25,7 @@
    "outputs": [],
    "source": [
     "\n",
+    "hola q tal"
     "import numpy as np\n",
     "from abc import abstractmethod\n",
     "from sklearn.base import BaseEstimator\n",
