mensaje en la 115

--- a/Practica4.ipynb
+++ b/Practica4.ipynb
@@ -25,7 +25,6 @@
    "outputs": [],
    "source": [
     "\n",
-    "hola q tal"
     "import numpy as np\n",
     "from abc import abstractmethod\n",
     "from sklearn.base import BaseEstimator\n",
@@ -113,7 +112,7 @@
     "        self.reg_param = None\n",
     "\n",
     "    def fit(self,X,y):\n",
-    "        \"\"\"Entrena el clasificador\n",
+    "        \"\"\"Entrena el Hola que tal clasificador\n",
     "        X: matriz numpy cada fila es un dato, cada columna una medida\n",
     "        y: vector de etiquetas, tantos elementos como filas en X\n",
     "        retorna objeto clasificador\"\"\"\n",
