Removed "hola que tal" commend

--- a/Practica4.ipynb
+++ b/Practica4.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 118,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -112,7 +112,7 @@
     "        self.reg_param = None\n",
     "\n",
     "    def fit(self,X,y):\n",
-    "        \"\"\"Entrena el Hola que tal clasificador\n",
+    "        \"\"\"Entrena el clasificador\n",
     "        X: matriz numpy cada fila es un dato, cada columna una medida\n",
     "        y: vector de etiquetas, tantos elementos como filas en X\n",
     "        retorna objeto clasificador\"\"\"\n",
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
        "'\\nfrom sklearn.datasets import load_iris\\ndataset = load_iris()\\nX = dataset.data\\ny = dataset.target\\nreg_param = [0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8]\\nclf = ClassifEstadisticoRegularizado(dataset.target_names, reg_param)\\nclf.fit(X, y)\\n#clf.decision_function(X)\\nclf.num_aciertos(X, y)\\n'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 120,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
