--- a/Practica4.ipynb
+++ b/Practica4.ipynb
@@ -142,7 +142,7 @@
     "\n",
     "1. Primero hay que calcular la matrix $S_{w}$ de dispersión dentro de cada clase.\n",
     "\n",
-    "$$S_{w} = \\sum\\limits_{i=0}^{c}\\sum\\limits_{x\\\n",
+    "$$S_{w} = \\sum\\limits_{i=0}^{c}\\sum\\limits_{x\\forall\n",
     "\n",
     "\n",
     "\n",
