--- a/Practica4.ipynb
+++ b/Practica4.ipynb
@@ -142,8 +142,9 @@
     "\n",
     "1. Primero hay que calcular la matrix $S_{w}$ de dispersión dentro de cada clase.\n",
     "\n",
-    "$$S_{w} = \\sum\\limits_{i=0}^{c}\\sum\\limits_{x\\forall\n",
+    "$$S_{w} = \\sum\\limits_{i=0}^{c}\\Sigma_{i}$$\n",
     "\n",
+    "2. Se calcula la matrix de dispersión entre clases $S_{b}$:\n",
     "\n",
     "\n",
     "\n",
