--- a/Practica4.ipynb
+++ b/Practica4.ipynb
@@ -2812,53 +2812,51 @@
     "# Paso 5: construir la matriz de proyección A seleccionando las n_componentes componentes principales\n",
     "A = autovec[:n_components]\n",
     "\n",
+    "print(\"A_pca.shape: \", A.shape)\n",
+    "\n",
     "# Paso 6: proyectar el conjunto de datos de entrenamiento estandarizado sobre el nuevo espacio\n",
     "X_train_pca = (A @ X_train.T).T\n",
+    "\n",
+    "print(\"X_train_pca:\", X_train_pca.shape)\n",
     "\n",
     "# Paso 7: proyectar el conjunto de datos de test sobre el nuevo espacio:\n",
     "X_test_pca = (A @ (X_test - np.mean(X_test, axis=0)).T).T\n",
     "\n",
+    "print(\"X_test_pca:\", X_test_pca.shape)\n",
     "\n",
+    "#eigenfaces2 = A.reshape((n_components,h,w))\n",
     "\n",
-    "print(\n",
-    "    \"Extracting the top %d eigenfaces from %d faces\" % (n_components, X_train.shape[0])\n",
-    ")\n",
+    "print(\"PCA done in %0.3fs\" % (time() - t0))\n",
     "\n",
-    "#pca = PCA(n_components=n_components, svd_solver=\"randomized\", whiten=True).fit(X_train)\n",
-    "\n",
-    "\"\"\"\n",
-    "print(\"pca_comps: \",pca.components_.shape)\n",
-    "print(\"eigenns \",eigenfaces.shape)\n",
-    "print(\"X_final:\", X_train_final.shape)\n",
-    "print(\"X_test_final:\", X_test_final.shape)\n",
-    "print(\"A:\", A.shape)\n",
-    "print(\"Autoval:\", autoval.shape)\n",
-    "print(\"Autovec:\", autovec.shape)\n",
-    "print(\"u:\", u.shape)\n",
-    "print(\"X_norm:\", X_norm.shape)\n",
-    "print(\"X_cov:\", X_train_cov.shape)\n",
-    "\n",
-    "print(\"Projecting the input data on the eigenfaces orthonormal basis\")\n",
+    "#LDA\n",
     "t0 = time()\n",
-    "X_train_pca = pca.transform(X_train)\n",
-    "X_test_pca = pca.transform(X_test)\n",
-    "print(\"done in %0.3fs\" % (time() - t0))\n",
-    "\"\"\"\n",
     "\n",
-    "#eigenfaces1 = pca.components_.reshape((n_components, h, w))\n",
-    "#print(\"eigen1: \",eigenfaces1)\n",
+    "Sw = np.zeros((n_components, n_components))\n",
+    "Sb = np.zeros((n_components, n_components))\n",
+    "n_clases = len(np.unique(y_train))\n",
+    "mu_clases = np.mean(X_train_pca, axis=0)\n",
+    "for i in range(n_clases):\n",
+    "    X_clase = X_train_pca[y_train==i]\n",
+    "    Sw = Sw + np.cov(X_clase, rowvar=False)\n",
+    "    Sb = Sb + (len(X_clase) * ((X_clase - mu_clases).T @ (X_clase - mu_clases)))\n",
+    "\n",
+    "# Calcular la descomposición espectral de la matriz Sw^-1 Sb\n",
+    "u, autoval, autovec = np.linalg.svd((np.linalg.inv(Sw)@Sb), full_matrices=False) \n",
+    "\n",
+    "\n",
+    "A = autovec[:n_components]\n",
+    "\n",
+    "print(\"A_lda.shape:\", A.shape)\n",
+    "\n",
+    "X_train_lda = (A @ X_train_pca.T).T\n",
+    "\n",
+    "print(\"X_train_lda: \", X_train_lda.shape)\n",
+    "\n",
+    "# Paso 7: proyectar el conjunto de datos de test sobre el nuevo espacio:\n",
+    "X_test_lda = (A @ (X_test_pca - np.mean(X_test_pca, axis=0)).T).T\n",
+    "\n",
     "eigenfaces2 = A.reshape((n_components,h,w))\n",
-    "\n",
-    "print(\"listo\")\n",
-    "print(\"done in %0.3fs\" % (time() - t0))\n",
-    "\n",
-    "\"\"\"\n",
-    "print(\"Projecting the input data on the eigenfaces orthonormal basis\")\n",
-    "t0 = time()\n",
-    "X_train_pca = pca.transform(X_train)\n",
-    "X_test_pca = pca.transform(X_test)\n",
-    "print(\"done in %0.3fs\" % (time() - t0))\n",
-    "\"\"\"\n"
+    "print(\"LDA done in %0.3fs\" % (time() - t0))\n"
    ]
   },
   {
@@ -2988,7 +2986,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.9.1"
   },
   "pycharm": {
    "stem_cell": {
