--- a/Practica4.ipynb
+++ b/Practica4.ipynb
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,11 +355,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
     "class ClassifEstadisticoRegularizado_metodo_clase(Classifier, BaseEstimator):\n",
+    "    \n",
+    "    def __init__(self, labels=[]):\n",
+    "        \"\"\"Constructor de la clase\n",
+    "        labels: lista de etiquetas de esta clase (argumento necesario)\"\"\"\n",
+    "        self.labels = labels\n",
+    "        self.mu = None # Array de medias\n",
+    "        self.cov = None # Array de matrices de covarianza de cada clase\n",
+    "        self.cov_reg = None # Array de matrices de covarianza regularizadas\n",
+    "        self.cov_reg_inv = None # Array de matrices de covarianza inversas\n",
+    "        self.det = None # Array de determinantes de las matrices de covarianza\n",
+    "        self.dont_ignore = [] # dimensiones a NO ignorar si cov se puede invertir\n",
+    "        self.priori = None\n",
+    "        # Terminos de la expresión cuadrática del clasificador\n",
+    "        self.a = None\n",
+    "        self.b = None\n",
+    "        self.c = None\n",
+    "\n",
+    "    def fit(self, X, y, l=0, g=0):\n",
+    "        \"\"\"Entrena el clasificador\n",
+    "        X: matriz numpy cada fila es un dato, cada columna una medida\n",
+    "        y: vector de etiquetas, tantos elementos como filas en X\n",
+    "        l: (lambda) hiperparámetro de similitud entre matrices de covarianza (ver introduccion)\n",
+    "        g: (gamma) hiperparámetro de regularización (ver introduccion)\n",
+    "        retorna objeto clasificador\"\"\"\n",
+    "        n_labels = len(self.labels)\n",
+    "        n_caracteristicas = X.shape[1]\n",
+    "        \n",
+    "        for c in range(n_labels):\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        self.mu = np.empty((n_labels, n_caracteristicas))\n",
+    "        self.cov = np.empty((n_labels, n_caracteristicas, n_caracteristicas))\n",
+    "        self.cov_lg = np.empty((n_labels, n_caracteristicas, n_caracteristicas))\n",
+    "        self.cov_lg_inv = np.empty((n_labels, n_caracteristicas, n_caracteristicas))\n",
+    "        self.det = np.empty(n_labels)\n",
+    "        self.priori = np.empty(n_labels) # Probabilidades a priori de cada clase\n",
+    "        cov_pooled = np.zeros((n_caracteristicas, n_caracteristicas)) # Matriz Sw\n",
+    "        self.a = np.empty((n_labels, n_caracteristicas, n_caracteristicas))\n",
+    "        self.b = np.empty((n_labels, n_caracteristicas))\n",
+    "        self.c = np.empty(n_labels)\n",
+    "        for c in range(len(self.labels)):\n",
+    "            X_clase = X[y==c]\n",
+    "            self.cov[c] = np.cov(X_clase, rowvar=False)\n",
+    "            cov_pooled = cov_pooled + ((X_clase.shape[0] / X.shape[0]) * self.cov[c])  # Matriz Sw en el libro de Webb (formula 2.15, pagina 42)\n",
+    "        for c in range(len(self.labels)):\n",
+    "            X_clase = X[y==c]\n",
+    "            self.mu[c] = np.mean(X_clase, axis=0)\n",
+    "            cov_l = (((1 - l) * X_clase.shape[0] * self.cov[c]) + (l * X.shape[0] * cov_pooled)) / ((1 - l) * X_clase.shape[0] + l * X.shape[0])\n",
+    "            self.cov_lg[c] = (1 - g) * cov_l + g * (np.trace(cov_l) / n_caracteristicas) * np.eye(n_caracteristicas)\n",
+    "            self.det[c] = np.linalg.det(self.cov_lg[c])\n",
+    "            if self.det[c] != 0:\n",
+    "                self.cov_lg_inv[c] = np.linalg.inv(self.cov_lg[c])\n",
+    "                self.det[c] = np.linalg.det(self.cov_lg[c])\n",
+    "                self.priori[c] = X_clase.shape[0] / X.shape[0]\n",
+    "                self.dont_ignore.append(c)\n",
+    "            else:\n",
+    "                self.det[c] = 1\n",
+    "                self.cov_lg_inv[c] = np.zeros((n_caracteristicas, n_caracteristicas))\n",
+    "                self.priori[c] = 1\n",
+    "            self.a[c] = -.5 * self.cov_lg_inv[c]\n",
+    "            self.b[c] = self.mu[c].T @ self.cov_lg_inv[c]\n",
+    "            self.c[c] = -.5 * (self.mu[c].T @ self.cov_lg_inv[c] @ self.mu[c]) -.5 * np.log(self.det[c]) + np.log(self.priori[c])\n",
+    "        return self\n",
+    "\n",
+    "    def decision_function(self,X):\n",
+    "        \"\"\"Estima el grado de pertenencia de cada dato a todas las clases \n",
+    "        X: matriz numpy cada fila es un dato, cada columna una medida del vector de caracteristicas. \n",
+    "        Retorna una matriz, con tantas filas como datos y tantas columnas como clases tenga\n",
+    "        el problema, cada fila almacena los valores pertenencia de un dato a cada clase\"\"\"\n",
+    "        res = np.zeros((X.shape[0], len(self.labels)))\n",
+    "        for c in self.dont_ignore:\n",
+    "            #res[:,c] = -.5 * np.log(self.det[c]) - .5 * np.diagonal((X - self.mu[c]) @ self.cov_lg_inv[c] @ (X - self.mu[c]).T) + np.log(self.priori)\n",
+    "            res[:,c] = np.einsum('ab,db,ad->a', X, self.a[c], X) + np.einsum('b,cb->c', self.b[c], X) + self.c[c]\n",
+    "        return res\n",
+    "        #return np.einsum('ab,cdb,ad->ac', X, self.a, X) + np.einsum('ab,cb->ca', self.b, X) + self.c[None,:]\n",
+    "\n",
+    "    def predict(self,X):\n",
+    "        \"\"\"Estima la etiqueta de cada dato. La etiqueta puede ser un entero o bien un string.\n",
+    "        X: matriz numpy cada fila es un dato, cada columna una medida\n",
+    "        retorna un vector con las etiquetas de cada dato\"\"\"\n",
+    "        return np.argmax(self.decision_function(X), axis=1)\n",
+    "    \n",
+    "    def num_aciertos(self,X,y):\n",
+    "        \"\"\"Cuenta el numero de aciertos del clasificador para un conjunto de datos X.\n",
+    "        X: matriz de datos a clasificar\n",
+    "        y: vector de etiquetas correctas\"\"\"\n",
+    "        return np.sum(self.predict(X)==y)\n",
+    "\n",
+    "\n",
+    "class ClassifEstadisticoRegularizado_metodo_clase2(Classifier, BaseEstimator):\n",
     "    \n",
     "    def __init__(self, labels=[]):\n",
     "        \"\"\"Constructor de la clase\n",
@@ -409,11 +500,11 @@
     "            if self.det[c] != 0:\n",
     "                self.cov_lg_inv[c] = np.linalg.inv(self.cov_lg[c])\n",
     "                self.det[c] = np.linalg.det(self.cov_lg[c])\n",
-    "                self.priori = X_clase.shape[0] / X.shape[0]\n",
+    "                self.priori[c] = X_clase.shape[0] / X.shape[0]\n",
     "                self.dont_ignore.append(c)\n",
     "                self.a[c] = -.5 * self.cov_lg_inv[c]\n",
     "                self.b[c] = self.mu[c].T @ self.cov_lg_inv[c]\n",
-    "                self.c[c] = -.5 * (self.mu[c].T @ self.cov_lg_inv[c] @ self.mu[c]) -.5 * np.log(self.det[c]) + np.log(X_clase.shape[0] / X.shape[0])\n",
+    "                self.c[c] = -.5 * (self.mu[c].T @ self.cov_lg_inv[c] @ self.mu[c]) -.5 * np.log(self.det[c]) + np.log(self.priori[c])\n",
     "        return self\n",
     "\n",
     "    def decision_function(self,X):\n",
@@ -423,7 +514,7 @@
     "        el problema, cada fila almacena los valores pertenencia de un dato a cada clase\"\"\"\n",
     "        res = np.zeros((X.shape[0], len(self.labels)))\n",
     "        for c in self.dont_ignore:\n",
-    "            #res[:,c] = -.5 * np.log(self.det[c]) - .5 * np.diagonal((X - self.mu[c]) @ self.cov_lg_inv[c] @ (X - self.mu[c]).T) + np.log(self.priori)\n",
+    "            #res[:,c] = -.5 * np.log(self.det[c]) - .5 * np.diagonal((X - self.mu[c]) @ self.cov_lg_inv[c] @ (X - self.mu[c]).T) + np.log(self.priori[c])\n",
     "            res[:,c] = np.einsum('ab,db,ad->a', X, self.a[c], X) + np.einsum('b,cb->c', self.b[c], X) + self.c[c]\n",
     "        return res\n",
     "        #return np.einsum('ab,cdb,ad->ac', X, self.a, X) + np.einsum('ab,cb->ca', self.b, X) + self.c[None,:]\n",
@@ -450,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -523,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -698,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -736,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -774,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 39,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -824,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -862,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -900,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -978,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1008,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -2986,7 +3077,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.9.0"
   },
   "pycharm": {
    "stem_cell": {
