--- a/Practica4.ipynb
+++ b/Practica4.ipynb
@@ -2752,7 +2752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -2800,7 +2800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -2830,7 +2830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -2852,7 +2852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -2890,7 +2890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -2940,7 +2940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
@@ -2950,7 +2950,7 @@
       "A_pca.shape:  (314, 2914)\n",
       "X_train_pca: (973, 314)\n",
       "X_test_pca: (244, 314)\n",
-      "PCA done in 13.547s\n"
+      "PCA done in 4.855s\n"
      ]
     }
    ],
@@ -2979,8 +2979,8 @@
     "#LDA\n",
     "t0 = time()\n",
     "\n",
-    "Sw = np.zeros((n_components, n_components))\n",
-    "Sb = np.zeros((n_components, n_components))\n",
+    "Sw = np.zeros((X_train_pca.shape[1], X_train_pca.shape[1]))\n",
+    "Sb = np.zeros((X_train_pca.shape[1], X_train_pca.shape[1]))\n",
     "n_clases = len(np.unique(y_train))\n",
     "mu_clases = np.mean(X_train_pca, axis=0)\n",
     "for i in range(n_clases):\n",
@@ -2994,7 +2994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
@@ -3045,7 +3045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
@@ -3054,7 +3054,7 @@
      "text": [
       "A_lda.shape: (100, 314)\n",
       "X_train_lda:  (973, 100)\n",
-      "LDA done in 31.746s\n"
+      "LDA done in 11.176s\n"
      ]
     }
    ],
@@ -3077,7 +3077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 167,
    "metadata": {
     "scrolled": true
    },
@@ -3088,7 +3088,7 @@
        "'\\neigenface_titles2 = [\"tryhardeigens %d\" % i for i in range(eigenfaces2.shape[0])]\\nplot_gallery(eigenfaces2, eigenface_titles2, h, w, n_row=3, n_col=6)\\nplt.show()\\n'"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 167,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3107,7 +3107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
@@ -3115,7 +3115,7 @@
      "output_type": "stream",
      "text": [
       "Predicting people's names on the test set\n",
-      "done in 0.002s\n",
+      "done in 0.001s\n",
       "y_test: (244,)\n",
       "y_pred: (244,)\n",
       "                   precision    recall  f1-score   support\n",
