--- a/Practica4.ipynb
+++ b/Practica4.ipynb
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,12 +290,6 @@
     "        \"\"\"Constructor de la clase\n",
     "        labels: lista de etiquetas de esta clase (argumento necesario)\"\"\"\n",
     "        self.labels = labels\n",
-    "        \"\"\"\n",
-    "        self.mu = None # Array de medias\n",
-    "        self.cov = None # Array de matrices de covarianza de cada clase\n",
-    "        self.cov_inv = None # Array de matrices de covarianza inversas\n",
-    "        self.det = None # Array de determinantes de las matrices de covarianza\n",
-    "        \"\"\"\n",
     "        # Terminos de la expresión cuadrática del clasificador\n",
     "        self.a = None\n",
     "        self.b = None\n",
@@ -308,22 +302,18 @@
     "        retorna objeto clasificador\"\"\"\n",
     "        n_labels = len(self.labels)\n",
     "        n_caracteristicas = X.shape[1]\n",
-    "        self.mu = np.empty((n_labels, n_caracteristicas))\n",
-    "        self.cov = np.empty((n_labels, n_caracteristicas, n_caracteristicas))\n",
-    "        self.cov_inv = np.empty((n_labels, n_caracteristicas, n_caracteristicas))\n",
-    "        self.det = np.empty(n_labels)\n",
     "        self.a = np.empty((n_labels, n_caracteristicas, n_caracteristicas))\n",
     "        self.b = np.empty((n_labels, n_caracteristicas))\n",
     "        self.c = np.empty(n_labels)\n",
     "        for c in range(len(self.labels)):\n",
     "            X_clase = X[y==c]\n",
-    "            self.cov[c] = np.cov(X_clase, rowvar=False)\n",
-    "            self.mu[c] = np.mean(X_clase, axis=0)\n",
-    "            self.cov_inv[c] = np.linalg.inv(self.cov[c])\n",
-    "            self.det[c] = np.linalg.det(self.cov[c])\n",
-    "            self.a[c] = -.5 * self.cov_inv[c]\n",
-    "            self.b[c] = self.mu[c].T @ self.cov_inv[c]\n",
-    "            self.c[c] = -.5 * (self.mu[c].T @ self.cov_inv[c] @ self.mu[c]) -.5 * np.log(self.det[c]) + np.log(X_clase.shape[0] / X.shape[0])\n",
+    "            cov = np.cov(X_clase, rowvar=False)\n",
+    "            mu = np.mean(X_clase, axis=0)\n",
+    "            cov_inv = np.linalg.inv(cov)\n",
+    "            det = np.linalg.det(cov)\n",
+    "            self.a[c] = -.5 * cov_inv\n",
+    "            self.b[c] = mu.T @ cov_inv\n",
+    "            self.c[c] = -.5 * (mu.T @ cov_inv @ mu) -.5 * np.log(det) + np.log(X_clase.shape[0] / X.shape[0])\n",
     "        return self\n",
     "\n",
     "    def decision_function(self,X):\n",
@@ -355,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +359,6 @@
     "        self.a = []\n",
     "        self.b = []\n",
     "        self.c = []\n",
-    "        \n",
     "        self.dont_ignore = None\n",
     "\n",
     "    def fit(self, X, y, l=0, g=0):\n",
@@ -428,13 +417,7 @@
     "        \"\"\"Constructor de la clase\n",
     "        labels: lista de etiquetas de esta clase (argumento necesario)\"\"\"\n",
     "        self.labels = labels\n",
-    "        self.mu = None # Array de medias\n",
-    "        self.cov = None # Array de matrices de covarianza de cada clase\n",
-    "        self.cov_reg = None # Array de matrices de covarianza regularizadas\n",
-    "        self.cov_reg_inv = None # Array de matrices de covarianza inversas\n",
-    "        self.det = None # Array de determinantes de las matrices de covarianza\n",
-    "        self.dont_ignore = [] # dimensiones a NO ignorar si cov se puede invertir\n",
-    "        self.priori = None\n",
+    "        self.dont_ignore = []\n",
     "        # Terminos de la expresión cuadrática del clasificador\n",
     "        self.a = None\n",
     "        self.b = None\n",
@@ -449,34 +432,25 @@
     "        retorna objeto clasificador\"\"\"\n",
     "        n_labels = len(self.labels)\n",
     "        n_caracteristicas = X.shape[1]\n",
-    "        self.mu = np.empty((n_labels, n_caracteristicas))\n",
-    "        self.cov = np.empty((n_labels, n_caracteristicas, n_caracteristicas))\n",
-    "        self.cov_lg = np.empty((n_labels, n_caracteristicas, n_caracteristicas))\n",
-    "        self.cov_lg_inv = np.empty((n_labels, n_caracteristicas, n_caracteristicas))\n",
-    "        self.det = np.empty(n_labels)\n",
-    "        self.priori = np.empty(n_labels)\n",
+    "        cov = np.empty((n_labels, n_caracteristicas, n_caracteristicas))\n",
     "        cov_pooled = np.zeros((n_caracteristicas, n_caracteristicas))\n",
-    "        self.a = np.empty((n_labels, n_caracteristicas, n_caracteristicas))\n",
-    "        self.b = np.empty((n_labels, n_caracteristicas))\n",
-    "        self.c = np.empty(n_labels)\n",
     "        for c in range(n_labels):\n",
     "            X_clase = X[y==c]\n",
-    "            self.cov[c] = np.cov(X_clase, rowvar=False)\n",
-    "            cov_pooled = cov_pooled + ((X_clase.shape[0] / X.shape[0]) * self.cov[c])  # Matriz Sw en el libro de Webb (formula 2.15, pagina 42)\n",
+    "            cov[c] = np.cov(X_clase, rowvar=False)\n",
+    "            cov_pooled = cov_pooled + ((X_clase.shape[0] / X.shape[0]) * cov[c])  # Matriz Sw en el libro de Webb (formula 2.15, pagina 42)\n",
     "        for c in range(n_labels):\n",
     "            X_clase = X[y==c]\n",
-    "            self.mu[c] = np.mean(X_clase, axis=0)\n",
-    "            cov_l = (((1 - l) * X_clase.shape[0] * self.cov[c]) + (l * X.shape[0] * cov_pooled)) / ((1 - l) * X_clase.shape[0] + l * X.shape[0])\n",
-    "            self.cov_lg[c] = (1 - g) * cov_l + g * (np.trace(cov_l) / n_caracteristicas) * np.eye(n_caracteristicas)\n",
-    "            self.det[c] = np.linalg.det(self.cov_lg[c])\n",
-    "            if self.det[c] != 0:\n",
-    "                self.cov_lg_inv[c] = np.linalg.inv(self.cov_lg[c])\n",
-    "                self.det[c] = np.linalg.det(self.cov_lg[c])\n",
-    "                self.priori[c] = X_clase.shape[0] / X.shape[0]\n",
+    "            mu = np.mean(X_clase, axis=0)\n",
+    "            cov_l = (((1 - l) * X_clase.shape[0] * cov[c]) + (l * X.shape[0] * cov_pooled)) / ((1 - l) * X_clase.shape[0] + l * X.shape[0])\n",
+    "            cov_lg = (1 - g) * cov_l + g * (np.trace(cov_l) / n_caracteristicas) * np.eye(n_caracteristicas)\n",
+    "            det = np.linalg.det(cov_lg)\n",
+    "            if det != 0:\n",
+    "                cov_lg_inv = np.linalg.inv(cov_lg)\n",
+    "                priori = X_clase.shape[0] / X.shape[0]\n",
     "                self.dont_ignore.append(c)\n",
-    "                self.a[c] = -.5 * self.cov_lg_inv[c]\n",
-    "                self.b[c] = self.mu[c].T @ self.cov_lg_inv[c]\n",
-    "                self.c[c] = -.5 * (self.mu[c].T @ self.cov_lg_inv[c] @ self.mu[c]) -.5 * np.log(self.det[c]) + np.log(self.priori[c])\n",
+    "                self.a[c] = -.5 * cov_lg_inv\n",
+    "                self.b[c] = mu.T @ cov_lg_inv\n",
+    "                self.c[c] = -.5 * (mu.T @ cov_lg_inv @ mu) -.5 * np.log(det) + np.log(priori)\n",
     "        return self\n",
     "\n",
     "    def decision_function(self,X):\n",
@@ -721,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -784,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -822,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -860,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 46,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -910,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -948,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -986,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1082,7 +1056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1112,29 +1086,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\users\\jan\\appdata\\local\\programs\\python\\python39\\lib\\site-packages\\sklearn\\discriminant_analysis.py:873: UserWarning: Variables are collinear\n",
+      "  warnings.warn(\"Variables are collinear\")\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "510\n"
-     ]
-    },
-    {
-     "ename": "LinAlgError",
-     "evalue": "Singular matrix",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mLinAlgError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_9560/3729487948.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;31m# Clasificador estadístico regularizado con el metodo de clase\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mclss_est_mc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mClassifEstadisticoRegularizado_metodo_clase\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0munique\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my_train\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0mclss_est_mc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m \u001b[1;31m# Clasificador estadístico regularizado con el metodo de sklearn\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[0mclss_est_msk\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mClassifEstadisticoRegularizado_metodo_sklearn\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0munique\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my_train\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_9560/2377331928.py\u001b[0m in \u001b[0;36mfit\u001b[1;34m(self, X, y, l, g)\u001b[0m\n\u001b[0;32m     30\u001b[0m             \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdiagonal\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcov\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m<\u001b[0m \u001b[0mtol\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     31\u001b[0m             \u001b[0mdet\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlinalg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdet\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcov\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 32\u001b[1;33m             \u001b[0mcov_inv\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlinalg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcov\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     33\u001b[0m             \u001b[0mpriori\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mX_clase\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m/\u001b[0m \u001b[0mX\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     34\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m.5\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcov_lg_inv\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mc\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<__array_function__ internals>\u001b[0m in \u001b[0;36minv\u001b[1;34m(*args, **kwargs)\u001b[0m\n",
-      "\u001b[1;32mc:\\users\\jan\\appdata\\local\\programs\\python\\python39\\lib\\site-packages\\numpy\\linalg\\linalg.py\u001b[0m in \u001b[0;36minv\u001b[1;34m(a)\u001b[0m\n\u001b[0;32m    543\u001b[0m     \u001b[0msignature\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'D->D'\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0misComplexType\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mt\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32melse\u001b[0m \u001b[1;34m'd->d'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    544\u001b[0m     \u001b[0mextobj\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mget_linalg_error_extobj\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0m_raise_linalgerror_singular\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 545\u001b[1;33m     \u001b[0mainv\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_umath_linalg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msignature\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0msignature\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mextobj\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mextobj\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    546\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mwrap\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mainv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mresult_t\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    547\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\users\\jan\\appdata\\local\\programs\\python\\python39\\lib\\site-packages\\numpy\\linalg\\linalg.py\u001b[0m in \u001b[0;36m_raise_linalgerror_singular\u001b[1;34m(err, flag)\u001b[0m\n\u001b[0;32m     86\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     87\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0m_raise_linalgerror_singular\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0merr\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mflag\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 88\u001b[1;33m     \u001b[1;32mraise\u001b[0m \u001b[0mLinAlgError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Singular matrix\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     89\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     90\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0m_raise_linalgerror_nonposdef\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0merr\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mflag\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mLinAlgError\u001b[0m: Singular matrix"
+      "isolet: datos: (7797, 617) n_clases: 26\n",
+      "\tClasificador distancia euclídea:\n",
+      "\t\tEvaluación por resustitución:\t 0.8809\n",
+      "\t\tEvaluación por exclusión:\t 0.8743\n",
+      "\tClasificador estadístico regularizado con el método de clase:\n",
+      "\t\tEvaluación por resustitución:\t 0.0384738698\n",
+      "\t\tEvaluación por exclusión:\t 0.0384862091\n",
+      "\tClasificador estadístico regularizado con el método de sklearn:\n",
+      "\t\tEvaluación por resustitución:\t 1.0000\n",
+      "\t\tEvaluación por exclusión:\t 0.0648\n",
+      "\tClasificador estadístico de sklearn:\n",
+      "\t\tEvaluación por resustitución:\t 1.0000\n",
+      "\t\tEvaluación por exclusión:\t 0.0648\n"
      ]
     }
    ],
