--- a/Practica4.ipynb
+++ b/Practica4.ipynb
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,6 +432,9 @@
     "        retorna objeto clasificador\"\"\"\n",
     "        n_labels = len(self.labels)\n",
     "        n_caracteristicas = X.shape[1]\n",
+    "        self.a = np.empty((n_labels, n_caracteristicas, n_caracteristicas))\n",
+    "        self.b = np.empty((n_labels, n_caracteristicas))\n",
+    "        self.c = np.empty(n_labels)\n",
     "        cov = np.empty((n_labels, n_caracteristicas, n_caracteristicas))\n",
     "        cov_pooled = np.zeros((n_caracteristicas, n_caracteristicas))\n",
     "        for c in range(n_labels):\n",
@@ -1056,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1086,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -1190,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1354,7 +1357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -1404,13 +1407,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Finalizado en 33.897s\n",
       "max_score exclusion:\t\t0.9660\n"
      ]
     }
@@ -1433,7 +1437,6 @@
     "                            [0.957024, 0.940346, 0.933932, 0.929442, 0.926876, 0.926235, 0.924952, 0.923028, 0.921745, 0.921103, 0.919820],\n",
     "                            [0.942912, 0.923028, 0.917896, 0.912123, 0.910840, 0.909557, 0.908275, 0.907633, 0.907633, 0.906992, 0.906992],\n",
     "                            [0.871071, 0.874278, 0.872996, 0.872354, 0.872354, 0.872354, 0.872354, 0.872354, 0.872354, 0.872354, 0.872354]])\n",
-    "\n",
     "\n",
     "#scores_exclusion = GridSearchExclusion(X_train_final, y_train, X_test_final, y_test)\n",
     "\n",
