Literalmente un resumen de la primera parte de la asignatura

--- a/Practica4.ipynb
+++ b/Practica4.ipynb
@@ -11,9 +11,7 @@
     "# **Práctica Final Reconocimiento de Formas**\n",
     "\n",
     "* **Alumno 1**: Bolinches Segovia, Jorge\n",
-    "* **Alumno 2**: Cerezo Pomykol, Jan\n",
-    "\n",
-    "**Nota**: El alumno *Cercadillo Muñoz, Daniel*, que figura como autor en las anteriores entregas, sin haber participado en la elaboración de ninguna de ellas, nos ha confirmado oficialmente que ha abandonado la asignatura, por tanto no consta como autor en esta práctica."
+    "* **Alumno 2**: Cerezo Pomykol, Jan"
    ]
   },
   {
