--- a/Practica2/Practica.ipynb
+++ b/Practica2/Practica.ipynb
@@ -1,9 +1,28 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "26dcae2d-a218-421c-87bd-f7da8443540b",
+   "metadata": {},
+   "source": [
+    "# **Práctica 2**\n",
+    "\n",
+    "* **Alumno 1**: Bolinches Segovia, Jorge\n",
+    "* **Alumno 2**: Cerezo Pomykol, Jan"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4cc77122-d485-4114-98ef-81b9390c5994",
+   "id": "2761bab0-1cdb-4c3d-89a5-cfbe45ab9d9a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f7d4d5f6-c6e5-4b31-8749-de40ef6de369",
    "metadata": {},
    "outputs": [],
    "source": []
