--- a/Practica2/Practica.ipynb
+++ b/Practica2/Practica.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "622f63a0-ada3-45b3-96d0-140fde22d1e7",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,36 @@
     "    y.to_pickle(\"mnist_y.pickle\")\n",
     "\n",
     "X_mnist = np.array(X)\n",
-    "y_mnist = pd.factorize(y)[0]"
+    "y_mnist = pd.factorize(y)[0]\n",
+    "\n",
+    "datasets = {\"iris\": (X_iris, y_iris),\n",
+    "            \"wine\": (X_wine, y_wine),\n",
+    "            \"cancer\": (X_cancer, y_cancer),\n",
+    "            \"isolet\": (X_isolet, y_isolet),\n",
+    "            \"mnist\": (X_mnist, y_mnist)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "03963aea-c2ca-429d-a858-3124ff783ef6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "iris: (150, 4)\n",
+      "wine: (178, 13)\n",
+      "cancer: (569, 30)\n",
+      "isolet: (7797, 617)\n",
+      "mnist: (70000, 784)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in datasets:\n",
+    "    print(i, \": \", datasets[i][0].shape, sep='')"
    ]
   },
   {
@@ -79,8 +108,55 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "id": "fe6c4890-7c68-4649-a8d2-7c47b38951ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import Perceptron\n",
+    "from sklearn.model_selection import cross_val_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "d9a20c3b-440d-4943-8c28-1674896ac5b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "iris: 0.7067, std: 0.0611\n",
+      "wine: 0.6134, std: 0.1230\n",
+      "cancer: 0.8964, std: 0.0345\n",
+      "isolet: 0.9433, std: 0.0181\n",
+      "mnist: 0.8671, std: 0.0123\n"
+     ]
+    }
+   ],
+   "source": [
+    "clf = Perceptron(tol=1e-3, random_state=0)\n",
+    "\n",
+    "for i in datasets:\n",
+    "    scores = cross_val_score(clf, datasets[i][0], datasets[i][1], cv=10)\n",
+    "    print(i, \": \", \"%.4f\" % np.mean(scores), \", std: \", \"%.4f\" % np.std(scores), sep='')\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f547663-16cc-4619-beed-981e7d5f3f3f",
+   "metadata": {},
+   "source": [
+    "## Ensemble del clasificador."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "f7d4d5f6-c6e5-4b31-8749-de40ef6de369",
+   "id": "85c0ef1e-6323-43cd-ae22-90ba774abae7",
    "metadata": {},
    "outputs": [],
    "source": []
